Add initial portfolio structure with sections for About, Projects, Skills, and Contact

--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Balaskanda Sivanandame — Portfolio</title>
+
+  <!-- Pixel font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <header class="hero section" id="home">
+    <div class="hero-inner container animate-up">
+      <div class="avatar-wrap">
+        <!-- By default it looks for assets/avatar.png -->
+        <!-- To embed the uploaded image as data URI: replace the src with the full data URI from avatar_data_uri.txt -->
+        <img id="avatar" src="assets/avatar.png" alt="Avatar">
+      </div>
+      <div class="intro">
+        <h1>Balaskanda Sivanandame</h1>
+        <p class="tagline">High schooler • Curious coder • Pixel enthusiast</p>
+        <div class="cta-row">
+          <a class="btn" href="#projects">See Projects</a>
+          <a class="btn ghost" href="#contact">Contact</a>
+        </div>
+      </div>
+    </div>
+    <div class="pixel-bg"></div>
+  </header>
+
+  <main>
+    <section class="section about" id="about">
+      <div class="container animate-left">
+        <h2>About Me</h2>
+        <p>Hi — I'm Balaskanda. I'm a high school student exploring coding, art, and game design. I like building small projects that are fun to share. (I'll fill this out later.)</p>
+      </div>
+    </section>
+
+    <section class="section projects" id="projects">
+      <div class="container">
+        <h2 class="animate-up">Projects</h2>
+        <div class="cards">
+          <article class="card animate-up">
+            <div class="card-pixel">
+              <div class="card-thumb"> </div>
+            </div>
+            <h3>Project Title</h3>
+            <p>Short description. Replace with your real projects.</p>
+            <div class="card-actions">
+              <a class="chip" href="#">Demo</a>
+              <a class="chip" href="#">Code</a>
+            </div>
+          </article>
+
+          <article class="card animate-up">
+            <div class="card-pixel">
+              <div class="card-thumb"> </div>
+            </div>
+            <h3>Another Project</h3>
+            <p>Short description. Replace later.</p>
+            <div class="card-actions">
+              <a class="chip" href="#">Demo</a>
+              <a class="chip" href="#">Code</a>
+            </div>
+          </article>
+
+          <article class="card animate-up">
+            <div class="card-pixel">
+              <div class="card-thumb"> </div>
+            </div>
+            <h3>Coming Soon</h3>
+            <p>Placeholder for more projects.</p>
+            <div class="card-actions">
+              <a class="chip" href="#">Demo</a>
+              <a class="chip" href="#">Code</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section skills" id="skills">
+      <div class="container animate-right">
+        <h2>Skills</h2>
+        <p>Languages & Tools</p>
+        <ul class="skill-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Python</li>
+          <li>Git</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section contact" id="contact">
+      <div class="container animate-up">
+        <h2>Contact</h2>
+        <p>Thanks for visiting! Replace email and links with your details.</p>
+        <p class="contact-row">
+          <a class="btn" href="mailto:example@example.com">Email me</a>
+          <a class="btn ghost" href="#">LinkedIn</a>
+          <a class="btn ghost" href="#">GitHub</a>
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <small>© <span id="year"></span> Balaskanda Sivanandame — Built with a pixel heart</small>
+    </div>
+  </footer>
+</body>
+</html>
 
